pkg/lang/testdata/ub/config/valid/factory-pin.ub
factory: {
  pin: {
    library-path: 'github.com/me/lib//web'
    supported-versions: [
      { version: 'v1.2.3', content-revision: 'abc123' },
    ]
  }
  configurations: { aws.default: { region: 'us-east-1' } }
  inputs: { name: 'world' }
}
