pkg/lang/testdata/ub/config/invalid/pin-entry-unknown-key.ub
factory: { pin: { supported-versions: [{ version: 'v1', revision: 'abc' }] } }
